# lwc2025

./: .gitignore  README.md  count_lines.sh  flake.nix  requirements.txt  textx-cloc-defs.txt
examples/: house.ql  tax.ql
features/: LanguageWorkbench_FeatureConfiguration.xlsx  ModelingWorkbench_FeatureConfiguration.xlsx  QLFeatures_Table_Template.xlsx
tests/: test_expressions.py
textx-gen-ql-web/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  runtests.sh
textx-gen-ql-web/qlweb/: __init__.py  field.py
textx-gen-ql-web/qlweb/templates/: README.md  package-lock.json  package.json.jinja
textx-gen-ql-web/qlweb/templates/src/: App.jsx  main.jsx
textx-gen-ql-web/qlweb/templates/src/components/: money.jsx  numeric.jsx  yesno.jsx
textx-gen-ql-web/qlweb/templates/src/pages/: questionnaire.tsx.jinja
textx-gen-ql-web/qlweb/templates/src/utils/: convert.tsx
textx-gen-ql-web/tests/: test_generator.py
textx-lang-ql/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  runtests.sh
textx-lang-ql/questlang/: __init__.py  form.py  kahn.py  questlang.tx  types.py  utils.py
